Criado navbar e inserido fonte que será

--- a/home.html
+++ b/home.html
@@ -7,8 +7,19 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='home.css'>
     <script src='home.js'></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ancizar+Sans:ital,wght@0,100..1000;1,100..1000&display=swap" rel="stylesheet">
+    <!-- Fim do Google Fonts-->
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <ul><a class="active">Home</a></ul>
+            <ul><a>Sobre</a></ul>
+            <ul><a>Cadastro</a></ul>
+        </ul>
+    </nav>
 </body>
 </html>
