Criado a navbar para acessar as demais páginas com href

--- a/home.html
+++ b/home.html
@@ -7,8 +7,8 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='home.css'>
     <script src='home.js'></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
@@ -17,9 +17,9 @@
 <body>
     <nav>
         <ul>
-            <ul><a class="active">Home</a></ul>
-            <ul><a>Sobre</a></ul>
-            <ul><a>Cadastro</a></ul>
+            <ul><a class="active" href="home.html">Home</a></ul>
+            <ul><a href="sobre.html">Sobre</a></ul>
+            <ul><a href="cadastro.html">Cadastro</a></ul>
         </ul>
     </nav>
 </body>
