Adicionado href e a classe active para identificar qual página o o usuário está

--- a/sobre.html
+++ b/sobre.html
@@ -7,11 +7,20 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='sobre.css'>
     <script src='sobre.js'></script>
+<!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <!-- Fim do Google Fonts-->
 </head>
 <body>
-    
-
-    
-
+    <nav>
+       <ul>
+            <ul><a href="home.html">Home</a></ul>
+            <ul><a class="active" href="sobre.html">Sobre</a></ul>
+            <ul><a href="cadastro.html">Cadastro</a></ul>
+        </ul>
+    </nav>
 </body>
 </html>
