Criado Home com 3 Modelos (M3 G80, M2 G87 G-POWER e M5 G90), e com footer

--- a/home.html
+++ b/home.html
@@ -16,11 +16,50 @@
 </head>
 <body>
     <nav>
-        <ul>
-            <ul><a class="active" href="home.html">Home</a></ul>
-            <ul><a href="sobre.html">Sobre</a></ul>
-            <ul><a href="cadastro.html">Cadastro</a></ul>
-        </ul>
+        <div class="nav-container">
+            <div class="logo">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/BMW.svg/1200px-BMW.svg.png" alt="BMW Logo" width="60">
+            </div>
+            <ul class="nav-links">
+                <ul><a class="active" href="home.html">Home</a></ul>
+                <ul><a href="sobre.html">Sobre</a></ul>
+                <ul><a href="cadastro.html">Cadastro</a></ul>
+            </ul>
+        </div>
     </nav>
+
+        <main>
+        <section class="hero">
+            <h1>BMW M Series</h1>
+            <p>Performance sem compromissos</p>
+        </section>
+
+        <section class="models">
+            <h2>Modelos em Destaque</h2>
+            <div class="model-grid">
+                <div class="model-card">
+                    <img src="m3.jpg" alt="BMW M3">
+                    <h3>BMW M3</h3>
+                    <p>Potência e elegância em um sedan esportivo</p>
+                </div>
+                <div class="model-card">
+                    <img src="m2.jpg" alt="BMW M2">
+                    <h3>BMW M2 G-POWER</h3>
+                    <p>Diversão ao volante em seu formato mais puro com 690Cv</p>
+                </div>
+                <div class="model-card">
+                    <img src="m5.jpeg" alt="BMW M5">
+                    <h3>BMW M5</h3>
+                    <p>O super sedan executivo</p>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 BMW M Series - Todos os direitos reservados</p>
+    </footer>
+</body>
+</html>
 </body>
 </html>
