--- a/sobre.html
+++ b/sobre.html
@@ -6,6 +6,7 @@
     <title>Sobre a BMW M Series</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='home.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='sobre.css'>
   <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
