--- a/cadastro.html
+++ b/cadastro.html
@@ -73,6 +73,11 @@
                     <input type="text" id="bairro" name="bairro" required>
                 </div>
 
+                <div class="form-group">
+                    <label for="complemento">Complemento</label>
+                    <input type="text" id="complemento" name="complemento" required>
+                </div>
+
                 <div class="form-row">
                     <div class="form-group">
                         <label for="cidade">Cidade</label>
