Adicionado estilo de lista quadrado nos pontos de conquistas

--- a/sobre.html
+++ b/sobre.html
@@ -54,7 +54,7 @@
                 <div class="achievements">
                     <h2>Conquistas</h2>
                     <p>A BMW M Series acumulou inúmeras vitórias em competições de automobilismo ao longo dos anos, incluindo:</p>
-                    <ul class="lista-conquistas" style="list-style: square;">
+                    <ul class="lista-conquistas" style="list-style: square;"> <!-- Adicionado estilo quadrado-->
                         <li>24 Horas de Nürburgring</li>
                         <li>DTM - Deutsche Tourenwagen Masters</li>
                         <li>ALMS - American Le Mans Series</li>
