Adicionado estilo de lista quadradado nos itens tecnológios disponibilizados nos carros

--- a/sobre.html
+++ b/sobre.html
@@ -43,7 +43,7 @@
                 
                 <h2>Tecnologia e Inovação</h2>
                 <p>Os modelos M Series incorporam tecnologias avançadas como:</p>
-                <ul class="tech-list">
+                <ul class="tech-list" style="list-style: square;">
                     <li>Motores de alta performance com tecnologia TwinPower Turbo</li>
                     <li>Sistemas de tração traseira ou integral xDrive</li>
                     <li>Suspensão esportiva ajustável</li>
